架构更新:新增页面改为配置方式并提供默认模板

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ node_modules
 client/node_modules
 client/package-lock.json
 client/assit/cache
+client/etc
 server/node_modules
 server/package-lock.json
 server/view
 server/www
 server/runtime
+server/etc
