自动化添加spaController配置

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your_project_backedn",
+  "name": "your_project_backend",
   "description": "A Web integrated development environment.",
   "version": "0.0.1",
   "scripts": {
