--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "init": "concurrently \"npm run init --prefix server\" \"npm run init --prefix client\"",
-    "start": "concurrently \"npm start --prefix server\" \"wait-on tcp:8900 && npm start --prefix client\""
+    "start": "concurrently \"node config.js\" \"npm start --prefix server\" \"wait-on tcp:8900 && npm start --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
   "devDependencies": {
     "concurrently": "^4.1.2",
     "wait-on": "^3.3.0"
+  },
+  "dependencies": {
+    "glob": "^7.1.6"
   }
 }
