--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "server": "node_modules/json-server/bin/index.js --watch ./src/index_list/server/db.json",
     "watch": "webpack --progress  --watch",
     "start": "webpack-dev-server --config './conf/webpack.dev.js' --open",
-    "build": "webpack --config './conf/webpack.prod.js'",
+    "build": "cross-env NODE_ENV=production webpack --config './conf/webpack.prod.js'",
     "init": "npm install && npm run build"
   },
   "keywords": [],
@@ -26,8 +26,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^7.0.2",
     "css-loader": "^0.28.7",
     "del-cli": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -55,6 +57,8 @@
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "svelte": "^3.20.1",
+    "svelte-loader": "^2.13.6",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
